[package]
name = "ferric_net_scanner"
version = "0.0.0"
edition = "2021"

[dependencies]
csnmp = "0.6.0"
tokio = { version = "1.37.0", features = ["full"] }
anyhow = "1.0.86"
pnet = "0.34.0"
arp-toolkit = { version =  "0.3.2", features = ["sync"] }
dns-lookup = "2.0.4"
clap = { version = "4.0.32", features = ["derive"] }
indicatif = "0.17.8"
rayon = "1.10.0"
oui = "0.8.1"
eui48 = "1.1.0"